--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Segoe UI',SegoeUI,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 .maindiv {
     position: absolute;
     width: 99%;
@@ -12,18 +15,33 @@
 .micrologo {
     display: flex;
     height: 25px;
-    margin-left: 5rem;
+    margin-left: 155px;
 }
 
 .nav1 {
     display: flex;
     margin-left: 2rem;
 }
+.nav2-icon-img {
+    /* margin-top: 10px; */
+}
 .nav2 {
+    /* height: 5px; */
+    align-items: center;
     display: flex;
-    margin-left: 30%;
-    justify-self: flex-end;
+    margin-left: 700px;
+    flex-direction: row;
+    justify-content: center;
     margin-right: 10%;
+    /* width: 130px; */
+    align-items: center;
+    text-align: center;
+}
+.nav2-ic {
+    margin-left: 30px;
+}
+.nav2-icon-img {
+    height: 22px;
 }
 .nav1 p {
     margin-left: 10px;
@@ -51,18 +69,24 @@
     left: 50%;
     transform: translate(30%,-50%);
     /* border: 2px solid black; */
-    background-color: rgb(237, 223, 206);
+    /* background-color: rgb(237, 223, 206); */
     width: 30%;
     height: 30%;
 
 }
+.card-p-1 {
+    font-weight: 550;
+    font-size: 40px;
+}
 .learn-more {
-    background-color: rgb(119, 119, 184);
-    font-weight: 800;
+    background-color: #0067BB;
+    font-weight: 550;
+    color: white;
     /* transform: translate(-50%,-50%); */
-    margin-left: 30%;
+    /* margin-left: 30%; */
     /* border-radius: 30%; */
-    height: 30px;
+    height: 40px;
+    width: 100px;
     border: none;
 }
 .dev-logos {
@@ -75,15 +99,21 @@
     max-width: 100%; */
     overflow-x: auto;
 }
-
+.dlogo1 {
+    margin-left: 30%;
+}
+.dev-logos a {
+    font-weight: 500;
+}
 .dlogo {
-    /* position: static; */
     display: flex;
+    margin-right: 30px;
     flex-direction: column;
     height: 70px;
-    margin-left: 10%;
-    /* background-color: yellow; */
     justify-content: center;
+}
+.dlogo a {
+    color: #0067BB;
 }
 .imgi {
     height: 40px;
@@ -162,7 +192,7 @@
 .for-business {
     font-weight: 550;
     font-size: 30px;
-    margin-top: 90px;
+    margin-top: 120px;
     margin-left: 25px;
 }
 
@@ -204,12 +234,22 @@
 
 .footer {
     display: flex;
-    background-color: rgb(199, 199, 199);
+    background-color: #f1f1f1;
 }
 
-.ftinfo {
+.ftinfo {   
     text-align: center;
+    font-size: 12px;
+    margin-left: 20px;
 }
 .ftinfo ul {
     list-style-type: none;
+}
+
+.whatsnew {
+    margin-left: 10%;
+}
+
+.footer li {
+    margin-top: 18px;
 }
